This commit contains the work on the Testimonials section

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-first-project",
+  "name": "tailwind-first-project-part-2",
   "version": "1.0.0",
   "description": "",
   "main": "tailwind.config.js",
